Remove 404 text from offline page

--- a/public/pwa_offline.html
+++ b/public/pwa_offline.html
@@ -127,8 +127,7 @@
     </div>
     <div class="error-text-container">
       <h1>
-        <span class="text-primary font-weight-bold">404</span>
-        <small class="text-muted">You are offline</small>
+        <small class="text-primary">You are offline</small>
       </h1>
       <p>
         This content is not available offline.
