add link to Mastodon on error pages

--- a/public/422.html
+++ b/public/422.html
@@ -138,6 +138,9 @@
       </p>
       <ul class="links mt-0">
         <li>
+          <a href="https://fosstodon.org/@retrospring">Mastodon: @retrospring@fosstodon.org</a>
+        </li>
+        <li>
           <a href="https://twitter.com/Retrospring">Twitter: @Retrospring</a>
         </li>
         <li>
