update to new mastodon handle

--- a/public/422.html
+++ b/public/422.html
@@ -138,7 +138,7 @@
       </p>
       <ul class="links mt-0">
         <li>
-          <a href="https://fosstodon.org/@retrospring">Mastodon: @retrospring@fosstodon.org</a>
+          <a href="https://floss.social/@retrospring">Mastodon: @retrospring@floss.social</a>
         </li>
         <li>
           <a href="https://twitter.com/Retrospring">Twitter: @Retrospring</a>
