--- a/public/502.html
+++ b/public/502.html
@@ -80,7 +80,7 @@
   </div>
   <div class="links">
     <a href="https://github.com/Retrospring/retrospring/issues">Bug tracker</a> &middot;
-    <a href="https://fosstodon.org/@retrospring">Mastodon</a> &middot;
+    <a href="https://floss.social/@retrospring">Mastodon</a> &middot;
     <a href="https://twitter.com/retrospring">Twitter</a>
   </div>
 </body>
